# Capstone2

./: .gitignore  Dockerfile  README.md  automated_reporting.py  config.py  create_lambdas.sh  create_lambdas_2.sh  create_repo.sh  deploy.sh  deployment.yaml  docker-compose.yaml  eda.py  evaluate.py  feature_engineering.py  insights_cache.txt  list_models.py  llm_consultant.py  logger.py  orchestrator.py  predict.py  profiler.py  push_images.sh  pyproject.toml  requirements.txt  serve.py  setup_data.py  start.py  test_llm_eval.py  test_upload.py  test_visual_analysis.py  train.py
